--- a/app/config/routing.yml
+++ b/app/config/routing.yml
@@ -7,3 +7,8 @@ api_message:
   type: rest
   prefix: /api/1
   resource: @CharlesMessageBundle/Resources/config/routing.yml
+
+api_api:
+  type: rest
+  prefix: /api/1
+  resource: @CharlesApiBundle/Resources/config/routing.yml
