--- a/app/config/security.yml
+++ b/app/config/security.yml
@@ -2,6 +2,11 @@ security:
     providers:
         in_memory:
             memory: ~
+    encoders:
+        Charles\UserBundle\Entity\User:
+            algorithm:        sha1
+            encode_as_base64: false
+            iterations:       1
 
     firewalls:
         dev:
