Create and aggreg messages. Fetch user's messages

--- a/src/Charles/MessageBundle/Resources/config/routing.yml
+++ b/src/Charles/MessageBundle/Resources/config/routing.yml
@@ -2,3 +2,8 @@ messages:
     type: rest
     resource: Charles\MessageBundle\Controller\MessageController
     name_prefix: api_
+
+aggreg:
+    type: rest
+    resource: Charles\MessageBundle\Controller\AggregController
+    name_prefix: api_
