--- a/composer.json
+++ b/composer.json
@@ -23,7 +23,8 @@
         "jms/serializer-bundle": "0.13.*",
         "friendsofsymfony/rest-bundle": "~1.4",
         "guzzlehttp/guzzle": "~4.1",
-        "predis/predis":"~1.0"
+        "predis/predis":"~1.0",
+        "twilio/sdk":"~4.2"
     },
     "require-dev": {
         "sensio/generator-bundle": "~2.3",
