--- a/composer.json
+++ b/composer.json
@@ -24,7 +24,8 @@
         "friendsofsymfony/rest-bundle": "~1.4",
         "guzzlehttp/guzzle": "~4.1",
         "predis/predis":"~1.0",
-        "twilio/sdk":"~4.2"
+        "twilio/sdk":"~4.2",
+        "nelmio/cors-bundle":"~1.4"
     },
     "require-dev": {
         "sensio/generator-bundle": "~2.3",
