--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -101,11 +101,11 @@ monolog:
             path: "%kernel.logs_dir%/%kernel.environment%_twilio.log"
             level: info
             channels: "twilio"
-            
+
 nelmio_cors:
     paths:
         '^/api/':
             allow_origin: ['*']
             allow_headers: ['*']
-            allow_methods: ['POST', 'PUT', 'GET', 'DELETE','OPTIONS']
+            allow_methods: ['POST', 'PUT', 'GET', 'DELETE','OPTIONS','PATCH']
             max_age: 3600
